fix : merge issues