@@ -6,18 +6,15 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
-import java.util.*;
-
-// this loads the JSON file once
-// then stores a list of activities
-// then creates a map <tag, List<Activity>>
+import java.util.Map;
 
 public class ActivityService {
-    private final List<Activity> activities; // = new ArrayList<>();
+    private final List<Activity> activities;
     private final Map<String, List<Activity>> tagIndex = new HashMap<>();
 
-    public ActivityService(String filepath) {
-        this.activities = DataLoader.loadActivities(filepath);
+    // No filepath needed now
+    public ActivityService() {
+        this.activities = DataLoader.loadActivities(); // uses classpath
         buildTagIndex();
     }
 
@@ -29,22 +26,19 @@ public class ActivityService {
         }
     }
 
-    // filtering method ---- consider moving to separate class for readability
+    // filtering method
     public List<Activity> filterByTags(List<String> selectedTags) {
         if (selectedTags == null || selectedTags.isEmpty()) {
             return activities;
         }
 
-        // starting with first tag's list
         List<Activity> result = new ArrayList<>(tagIndex.getOrDefault(
-                selectedTags.getFirst(), Collections.emptyList()
+                selectedTags.get(0), Collections.emptyList()
         ));
 
-        // intersect with the rest
         for (int i = 1; i < selectedTags.size(); i++) {
             String tag = selectedTags.get(i);
             List<Activity> taggedActivities = tagIndex.getOrDefault(tag, Collections.emptyList());
-
             result.retainAll(taggedActivities);
         }
 
